# ecommerce-a2a-agents

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/orchestrator/: agent.py  executor.py  server.py
agents/order_agent/: agent.py  executor.py  server.py
agents/product_agent/: agent.py  executor.py  server.py
agents/search_agent/: agent.py  executor.py  server.py
data/: mock_data.py
mcp_server/: server.py
tests/: test_client.py  test_integration.py  test_mcp_tool_endpoint.py
utils/: config.py  logging.py  models.py
